experiment with imitate_episodes.py

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,11 @@
       "name": "Python Debugger: Current File with Arguments",
       "type": "debugpy",
       "request": "launch",
-      "program": "${workspaceFolder}/study/test_dbg.py",
+      // "program": "${workspaceFolder}/study/test_dbg.py",
+      "program": "${workspaceFolder}/imitate_episodes.py",
       "console": "integratedTerminal",
-      "args": "--task_name sim_transfer_cube_scripted --ckpt_dir 'ckpt_dir' --policy_class ACT --kl_weight 10 --chunk_size 100 --hidden_dim 512 --batch_size 8 --dim_feedforward 3200 --num_epochs 2000 --lr 1e-5 --seed 0"
+      "args": "--task_name sim_transfer_cube_scripted --ckpt_dir 'ckpt_dir' --policy_class ACT --kl_weight 10 --chunk_size 100 --hidden_dim 512 --batch_size 8 --dim_feedforward 3200 --num_epochs 2000 --lr 1e-5 --seed 0",
+      "justMyCode": false
     }
   ]
 }
